crates/backyard-parser/tests/snapshots/namespace__basic.snap
---
source: crates/backyard-parser/tests/namespace.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: namespace
    name:
      - 77
      - 121
      - 65
      - 112
      - 112
      - 92
      - 65
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 17
          offset: 17
        end:
          line: 1
          column: 17
          offset: 17
      leadings: ~
      trailings: ~
    is_bracket: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 17
        offset: 17
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 17
    offset: 17
leadings: ~
trailings: ~
